# iced

./: Cargo.toml
core/: Cargo.toml
core/src/: element.rs  gradient.rs  lib.rs  rectangle.rs  renderer.rs
examples/bench/: Cargo.toml
examples/custom_pipelines/: Cargo.toml
examples/custom_shader/: Cargo.toml  RFC.md
examples/custom_shader/src/: camera.rs  cube.rs  cubes.rs  custom_shader.rs  main.rs  pipeline.rs  primitive.rs  program.rs  shader.wgsl  triangle.rs
examples/custom_shader/src/cube/: raw.rs  uniforms.rs  vertex_3d.rs
examples/custom_shader/src/primitive/: buffer.rs  light.rs  raw.rs  uniforms.rs
examples/custom_shader/src/shaders/: cubes.wgsl  depth.wgsl
examples/gradient_dithering/: Cargo.toml
examples/graph_3d/: Cargo.toml
examples/graph_3d/src/: camera.rs  graph_3d.rs  main.rs  pipeline.rs  util.rs
examples/graph_3d/src/pipeline/: lines.rs  mesh_3d.rs
examples/graph_3d/src/shaders/: lines.wgsl  mesh_3d.wgsl
examples/graph_3d/src/util/: cube.rs  quad.rs  uniforms.rs
examples/pane_grid/: Cargo.toml
examples/screenshot/: Cargo.toml
examples/widget_operations/: Cargo.toml
glow/src/: backend.rs  image.rs  program.rs  quad.rs  triangle.rs
glutin/: Cargo.toml
glutin/src/: application.rs  multi_window.rs
graphics/: Cargo.toml
graphics/src/: backend.rs  compositor.rs  custom.rs  gradient.rs  layer.rs  lib.rs  primitive.rs  renderer.rs  triangle.rs
lazy/src/: responsive.rs
renderer/: Cargo.toml
src/: application.rs  daemon.rs  lib.rs  program.rs  settings.rs  window.rs
wgpu/: Cargo.toml
winit/: Cargo.toml
(+95 files in other folders)
