[package]
name = "custom_shader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { path = "../..", features = ["debug", "advanced"]}
iced_graphics = { path = "../../graphics" }
wgpu = "0.15"
bytemuck = "1.13.1"