[package]
name = "graph_3d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { path = "../..", features = ["debug", "advanced"] }
wgpu = "0.15.0"
glam = { version = "0.24.0", features = ["bytemuck"]}
bytemuck = "1.13.1"
rand = "0.8.5"
iced_graphics = { path = "../../graphics", feature = ["wgpu"]}